Arreglado bug en bloqueo comunicacion nodos + iniciando reestructuración código

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -12,12 +12,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmp3zph9zaw\n",
-      "INFO:torch.distributed.nn.jit.instantiator:Writing /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmp3zph9zaw/_remote_module_non_sriptable.py\n",
-      "INFO:root:Nodo a la escucha en localhost 50140\n",
-      "INFO:root:Nodo a la escucha en localhost 50141\n",
-      "INFO:root:Conexión aceptada con ('localhost', 50141)\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpt0peu7h_\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpt0peu7h_/_remote_module_non_sriptable.py\n",
+      "INFO:root:Nodo a la escucha en localhost 51987\n",
+      "INFO:root:Nodo a la escucha en localhost 51988\n",
+      "INFO:root:Conexión aceptada con ('localhost', 51988)\n",
       "INFO:root:Broadcasting start learning...\n",
+      "INFO:root:Training...\n",
       "INFO:root:Training...\n"
      ]
     },
@@ -25,25 +26,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TPU available: False, using: 0 TPU cores\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
       "\n",
@@ -118,40 +106,7 @@
       "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Round 1 of 2 finished. (('localhost', 50141))\n",
-      "Waiting for local model sharing processes to finish\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Round 1 of 2 finished. (('localhost', 50140))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "INFO:root:Round 1 of 2 finished. (('localhost', 51987))\n",
       "Waiting for local model sharing processes to finish\n",
       "INFO:root:Training...\n"
      ]
@@ -163,19 +118,21 @@
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name     | Type     | Params\n",
-      "--------------------------------------\n",
-      "0 | accuracy | Accuracy | 0     \n",
-      "1 | l1       | Linear   | 100 K \n",
-      "2 | l2       | Linear   | 33.0 K\n",
-      "3 | l3       | Linear   | 2.6 K \n",
-      "--------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Model added (2/2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
       "  | Name     | Type     | Params\n",
       "--------------------------------------\n",
@@ -194,8 +151,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 54000 Val:6000 Test:10000\n",
-      "Train: 54000 Val:6000 Test:10000\n"
+      "INFO:root:Agregating models.\n",
+      "INFO:root:Round 1 of 2 finished. (('localhost', 51988))\n",
+      "Waiting for local model sharing processes to finish\n",
+      "INFO:root:Training...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n"
      ]
     },
     {
@@ -211,6 +178,39 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 54000 Val:6000 Test:10000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  | Name     | Type     | Params\n",
+      "--------------------------------------\n",
+      "0 | accuracy | Accuracy | 0     \n",
+      "1 | l1       | Linear   | 100 K \n",
+      "2 | l2       | Linear   | 33.0 K\n",
+      "3 | l3       | Linear   | 2.6 K \n",
+      "--------------------------------------\n",
+      "136 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "136 K     Total params\n",
+      "0.544     Total estimated model params size (MB)\n"
+     ]
     },
     {
      "data": {
@@ -236,22 +236,21 @@
       "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 50140))\n",
+      "INFO:root:Round 2 of 2 finished. (('localhost', 51987))\n",
       "INFO:root:Finish!!.\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 50141))\n",
+      "INFO:root:Round 2 of 2 finished. (('localhost', 51988))\n",
       "INFO:root:Finish!!.\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 50140\n",
-      "DEBUG:root:Closed connection: ('localhost', 50140)\n",
-      "DEBUG:root:Closed connection: ('localhost', 50141)\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 50141\n"
+      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 51987\n",
+      "DEBUG:root:Closed connection: ('localhost', 51987)\n",
+      "DEBUG:root:Closed connection: ('localhost', 51988)\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 51988\n"
      ]
     }
    ],
    "source": [
     "from p2pfl.node import Node\n",
-    "from p2pfl.learning.learner import MyNodeLearning\n",
     "from p2pfl.agregator import FedAvg    \n",
     "from collections import OrderedDict\n",
     "import torch\n",
