Breve reestructuración directorios

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -12,247 +12,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpt0peu7h_\n",
-      "INFO:torch.distributed.nn.jit.instantiator:Writing /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpt0peu7h_/_remote_module_non_sriptable.py\n",
-      "INFO:root:Nodo a la escucha en localhost 51987\n",
-      "INFO:root:Nodo a la escucha en localhost 51988\n",
-      "INFO:root:Conexión aceptada con ('localhost', 51988)\n",
-      "INFO:root:Broadcasting start learning...\n",
-      "INFO:root:Training...\n",
-      "INFO:root:Training...\n"
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpudj90nk9\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpudj90nk9/_remote_module_non_sriptable.py\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name     | Type     | Params\n",
-      "--------------------------------------\n",
-      "0 | accuracy | Accuracy | 0     \n",
-      "1 | l1       | Linear   | 100 K \n",
-      "2 | l2       | Linear   | 33.0 K\n",
-      "3 | l3       | Linear   | 2.6 K \n",
-      "--------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n",
-      "\n",
-      "  | Name     | Type     | Params\n",
-      "--------------------------------------\n",
-      "0 | accuracy | Accuracy | 0     \n",
-      "1 | l1       | Linear   | 100 K \n",
-      "2 | l2       | Linear   | 33.0 K\n",
-      "3 | l3       | Linear   | 2.6 K \n",
-      "--------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 54000 Val:6000 Test:10000Train: 54000 Val:6000 Test:10000\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 1 of 2 finished. (('localhost', 51987))\n",
-      "Waiting for local model sharing processes to finish\n",
-      "INFO:root:Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Model added (2/2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  | Name     | Type     | Params\n",
-      "--------------------------------------\n",
-      "0 | accuracy | Accuracy | 0     \n",
-      "1 | l1       | Linear   | 100 K \n",
-      "2 | l2       | Linear   | 33.0 K\n",
-      "3 | l3       | Linear   | 2.6 K \n",
-      "--------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 1 of 2 finished. (('localhost', 51988))\n",
-      "Waiting for local model sharing processes to finish\n",
-      "INFO:root:Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 54000 Val:6000 Test:10000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  | Name     | Type     | Params\n",
-      "--------------------------------------\n",
-      "0 | accuracy | Accuracy | 0     \n",
-      "1 | l1       | Linear   | 100 K \n",
-      "2 | l2       | Linear   | 33.0 K\n",
-      "3 | l3       | Linear   | 2.6 K \n",
-      "--------------------------------------\n",
-      "136 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "136 K     Total params\n",
-      "0.544     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 51987))\n",
-      "INFO:root:Finish!!.\n",
-      "INFO:root:Model added (2/2)\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 51988))\n",
-      "INFO:root:Finish!!.\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 51987\n",
-      "DEBUG:root:Closed connection: ('localhost', 51987)\n",
-      "DEBUG:root:Closed connection: ('localhost', 51988)\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 51988\n"
+     "ename": "AttributeError",
+     "evalue": "can't set attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 60>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     56\u001b[0m         node\u001b[38;5;241m.\u001b[39mstop()\n\u001b[1;32m     57\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m.1\u001b[39m) \u001b[38;5;66;03m#Esperar por la asincronía\u001b[39;00m\n\u001b[0;32m---> 60\u001b[0m \u001b[43mtest_convergence\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mtest_convergence\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     12\u001b[0m nodes \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[0;32m---> 14\u001b[0m     node \u001b[38;5;241m=\u001b[39m \u001b[43mNode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlocalhost\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m     node\u001b[38;5;241m.\u001b[39mstart()\n\u001b[1;32m     16\u001b[0m     nodes\u001b[38;5;241m.\u001b[39mappend(node)\n",
+      "File \u001b[0;32m~/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/node.py:73\u001b[0m, in \u001b[0;36mNode.__init__\u001b[0;34m(self, host, port, model, agregator)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;66;03m# Learning\u001b[39;00m\n\u001b[1;32m     72\u001b[0m log_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhost) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mport)\n\u001b[0;32m---> 73\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlearner \u001b[38;5;241m=\u001b[39m \u001b[43m\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMLP\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mMnistFederatedDM\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlog_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlog_dir\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# HARD CODED MODEL + DATASET\u001b[39;00m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mround \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtotalrounds \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/learning/pytorch/learners/learner.py:19\u001b[0m, in \u001b[0;36m.__init__\u001b[0;34m(self, model, data, log_name)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m model            \n\u001b[1;32m     18\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m data\n\u001b[0;32m---> 19\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlogger \u001b[38;5;241m=\u001b[39m \u001b[43mFederatedTensorboardLogger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtraining_logs\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlog_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrainer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mepochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[0;32m~/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/learning/pytorch/utils/logger.py:11\u001b[0m, in \u001b[0;36mFederatedTensorboardLogger.__init__\u001b[0;34m(self, dir, name, version, **kwargs)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28mdir\u001b[39m, name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m , version \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munknown_node\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m#if name is not None:\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m#    self.name = name\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_version \u001b[38;5;241m=\u001b[39m version    \n",
+      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute"
      ]
     }
    ],
    "source": [
     "from p2pfl.node import Node\n",
-    "from p2pfl.agregator import FedAvg    \n",
-    "from collections import OrderedDict\n",
     "import torch\n",
     "import time\n",
     "\n",
@@ -463,24 +244,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8d7ffdf5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'n1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[43mn1\u001b[49m\u001b[38;5;241m.\u001b[39mneightboors)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'n1' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Nodo a la escucha en localhost 52603\n"
      ]
     }
    ],
    "source": [
-    "len(n1.neightboors)"
+    "n1 = Node(\"localhost\")\n",
+    "n1.start()"
    ]
   },
   {
@@ -493,8 +271,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "2a4d503a4039cbfae7f34b9a84e586502cbe191086ce22cab8837b1a13c7765a"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('federated_learning_p2p-Ow5sDig_')",
    "language": "python",
    "name": "python3"
   },
