Added observer pattern

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -12,13 +12,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpfgo0gw8l\n",
-      "INFO:torch.distributed.nn.jit.instantiator:Writing /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpfgo0gw8l/_remote_module_non_sriptable.py\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpimz5oumh\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmpimz5oumh/_remote_module_non_sriptable.py\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en localhost 49820\n",
+      "INFO:root:Nodo a la escucha en localhost 51409\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en localhost 49821\n",
-      "INFO:root:Conexión aceptada con ('localhost', 49821)\n",
+      "INFO:root:Nodo a la escucha en localhost 51410\n",
+      "INFO:root:Conexión aceptada con ('localhost', 51410)\n",
       "INFO:root:Broadcasting start learning...\n",
       "INFO:root:Training...\n",
       "INFO:root:Training...\n",
@@ -29,31 +29,31 @@
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
       "[54000, 54000]\n",
-      "INFO:root:Round 1 of 2 finished. (('localhost', 49821))\n",
+      "INFO:root:Round 1 of 2 finished. (('localhost', 51410))\n",
+      "INFO:root:Training...\n",
       "INFO:root:Model added (2/2)\n",
+      "INFO:root:Model added (1/2)\n",
+      "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Agregating models.\n",
       "[54000, 54000]\n",
-      "INFO:root:Round 1 of 2 finished. (('localhost', 49820))\n",
+      "INFO:root:Round 1 of 2 finished. (('localhost', 51409))\n",
       "INFO:root:Training...\n",
       "INFO:root:Model added (1/2)\n",
       "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Training...\n",
-      "INFO:root:Model added (1/2)\n",
-      "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
       "[54000, 54000]\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 49821))\n",
-      "INFO:root:Finish!!.\n",
       "INFO:root:Model added (2/2)\n",
+      "INFO:root:Round 2 of 2 finished. (('localhost', 51409))\n",
       "INFO:root:Agregating models.\n",
       "[54000, 54000]\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 49820))\n",
       "INFO:root:Finish!!.\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 49820\n",
-      "DEBUG:root:Closed connection: ('localhost', 49820)\n",
-      "DEBUG:root:Closed connection: ('localhost', 49821)\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 49821\n"
+      "INFO:root:Round 2 of 2 finished. (('localhost', 51410))\n",
+      "INFO:root:Finish!!.\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 51409\n",
+      "DEBUG:root:Closed connection: ('localhost', 51409)\n",
+      "DEBUG:root:Closed connection: ('localhost', 51410)\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 51410\n"
      ]
     }
    ],
@@ -121,34 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23e00247",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "from p2pfl.const import HEARTBEAT_FREC, TIEMOUT\n",
-    "from p2pfl.node import Node\n",
-    "import time\n",
-    "\n",
-    "n1 = Node(\"localhost\")\n",
-    "n2 = Node(\"localhost\")\n",
-    "n1.start()\n",
-    "n2.start()\n",
-    "\n",
-    "def test_interrupt_train():\n",
-    "    n1 = Node(\"localhost\")\n",
-    "    n1.start()\n",
-    "    n1.set_start_learning(99999,99999)\n",
-    "\n",
-    "    time.sleep(1) #Esperar por la asincronía\n",
-    "\n",
-    "    n1.set_stop_learning()\n",
-    "    n1.stop()\n",
-    "    \n",
-    "test_interrupt_train()"
-   ]
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named '_tkinter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconst\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HEARTBEAT_FREC, TIEMOUT\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnode\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Node\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      5\u001b[0m n1 \u001b[38;5;241m=\u001b[39m Node(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocalhost\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/node.py:11\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlearning\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpytorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlearners\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlightninglearner\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LightningLearner\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlearning\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpytorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmlp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MLP\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnode_connection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NodeConnection\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mheartbeater\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Heartbeater\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/node_connection.py:6\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mthreading\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlogging\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtkinter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m E\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommand\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mp2pfl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommunication_protocol\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CommunicationProtocol\n",
+      "File \u001b[0;32m/usr/local/Cellar/python@3.9/3.9.12/Frameworks/Python.framework/Versions/3.9/lib/python3.9/tkinter/__init__.py:37\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtypes\u001b[39;00m\n\u001b[0;32m---> 37\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01m_tkinter\u001b[39;00m \u001b[38;5;66;03m# If this fails your Python may not be configured for Tk\u001b[39;00m\n\u001b[1;32m     38\u001b[0m TclError \u001b[38;5;241m=\u001b[39m _tkinter\u001b[38;5;241m.\u001b[39mTclError\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtkinter\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named '_tkinter'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -402,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d5af9785",
+   "id": "1d5704f7",
    "metadata": {},
    "outputs": [
     {
@@ -433,8 +427,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "08adc39e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmp8lxoxgoo\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /var/folders/vm/p9lv42ms7ml71cjvsj4bnbnm0000gn/T/tmp8lxoxgoo/_remote_module_non_sriptable.py\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo a la escucha en localhost 51091\n",
+      "INFO:root:Nodo a la escucha en localhost 51092\n",
+      "INFO:root:Conexión aceptada con ('localhost', 51091)\n",
+      "1\n",
+      "DEBUG:root:Too mucho errors. ('localhost', 51091)\n",
+      "DEBUG:root:Last error: b'saludos Enrique y Dani'\n",
+      "DEBUG:root:Closed connection: ('localhost', 51091)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from p2pfl.const import HEARTBEAT_FREC, TIEMOUT\n",
+    "from p2pfl.node import Node\n",
+    "import time\n",
+    "\n",
+    "n1 = Node(\"localhost\")\n",
+    "n2 = Node(\"localhost\")\n",
+    "n1.start()\n",
+    "n2.start()\n",
+    "\n",
+    "def test_multimsg2():\n",
+    "\n",
+    "    # Conexión\n",
+    "    n1.connect_to(n2.host,n2.port)\n",
+    "    time.sleep(0.1) \n",
+    "\n",
+    "    # Parametrizar num errores x nodo -> actualmente esta en 1 -> casque\n",
+    "    n1.broadcast(b\"saludos Enrique y Dani\")\n",
+    "    time.sleep(0.1) \n",
+    "    #assert len(n2.neightboors) == 0\n",
+    "    \n",
+    "test_multimsg2()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c13a8c17",
+   "id": "0ffab868",
    "metadata": {},
    "outputs": [],
    "source": []
