--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -13,10 +13,10 @@
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en localhost 52146\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 60430\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo a la escucha en localhost 52147\n",
-      "INFO:root:Conexión aceptada con ('localhost', 52147)\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 60431\n",
+      "INFO:root:Conexión aceptada con ('127.0.0.1', 60431)\n",
       "INFO:root:Broadcasting start learning...\n",
       "INFO:root:Training...\n",
       "INFO:root:Training...\n",
@@ -26,37 +26,35 @@
       "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
-      "[54000, 54000]\n",
-      "INFO:root:Round 1 of 2 finished. (('localhost', 52146))\n",
       "INFO:root:Model added (2/2)\n",
+      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 60430))\n",
       "INFO:root:Training...\n",
-      "INFO:root:Agregating models.\n",
-      "[54000, 54000]\n",
       "INFO:root:Model added (1/2)\n",
       "INFO:root:Broadcasting model to all clients...\n",
-      "INFO:root:Round 1 of 2 finished. (('localhost', 52147))\n",
+      "INFO:root:Agregating models.\n",
+      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 60431))\n",
       "INFO:root:Training...\n",
       "INFO:root:Model added (1/2)\n",
       "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
-      "[54000, 54000]\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 52147))\n",
+      "INFO:root:Round 2 of 2 finished. (('127.0.0.1', 60431))\n",
       "INFO:root:Finish!!.\n",
       "INFO:root:Model added (2/2)\n",
       "INFO:root:Agregating models.\n",
-      "[54000, 54000]\n",
-      "INFO:root:Round 2 of 2 finished. (('localhost', 52146))\n",
+      "INFO:root:Round 2 of 2 finished. (('127.0.0.1', 60430))\n",
       "INFO:root:Finish!!.\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 52146\n",
-      "DEBUG:root:Closed connection: ('localhost', 52146)\n",
-      "DEBUG:root:Closed connection: ('localhost', 52147)\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 52147\n"
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 60430\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 60430)\n",
+      "DEBUG:root:Closed connection: ('127.0.0.1', 60431)\n",
+      "INFO:root:Bajando el nodo, dejando de escuchar en 127.0.0.1 60431\n"
      ]
     }
    ],
    "source": [
     "from p2pfl.node import Node\n",
+    "from p2pfl.learning.pytorch.datamodules.mnist import MnistFederatedDM\n",
+    "from p2pfl.learning.pytorch.models.mlp import MLP\n",
     "from collections import OrderedDict\n",
     "import torch\n",
     "import time\n",
@@ -116,6 +114,22 @@
     "        \n",
     "test_convergence((2,2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b403c73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a20b5ced",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
