--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -125,8 +125,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a20b5ced",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 54000 Val:6000 Test:10000\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 49992\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 49993\n",
+      "INFO:root:Conexión aceptada con ('127.0.0.1', 49992)\n",
+      "INFO:root:Broadcasting start learning...\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Model added (1/2)\n",
+      "INFO:root:Model added (1/2)\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Model added (2/2)\n",
+      "INFO:root:Agregating models.\n",
+      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 49993))\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Model added (1/2)\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "ERROR:root:Error decoding parameters\n",
+      "INFO:root:Model added (2/2)\n",
+      "INFO:root:Agregating models.\n",
+      "INFO:root:Round 1 of 2 finished. (('127.0.0.1', 49992))\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Model added (1/2)\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Model added (2/2)\n",
+      "INFO:root:Agregating models.\n",
+      "INFO:root:Round 2 of 2 finished. (('127.0.0.1', 49993))\n",
+      "INFO:root:Finish!!.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from p2pfl.communication_protocol import CommunicationProtocol\n",
+    "from p2pfl.const import HEARTBEAT_FREC, TIEMOUT\n",
+    "from p2pfl.learning.pytorch.datamodules.mnist import MnistFederatedDM\n",
+    "from p2pfl.learning.pytorch.models.mlp import MLP\n",
+    "from p2pfl.node import Node\n",
+    "import pytest\n",
+    "import time\n",
+    "import torch\n",
+    "\n",
+    "def two_nodes():\n",
+    "    n1 = Node(MLP(),MnistFederatedDM())\n",
+    "    n2 = Node(MLP(),MnistFederatedDM())\n",
+    "    n1.start()\n",
+    "    n2.start()\n",
+    "    return n1,n2\n",
+    "def test_bad_binary_model(two_nodes):\n",
+    "    n1, n2 = two_nodes\n",
+    "    n1.connect_to(n2.host,n2.port)\n",
+    "    time.sleep(0.1) \n",
+    "\n",
+    "    # Start Learning\n",
+    "    n1.set_start_learning(rounds=2,epochs=0)\n",
+    " \n",
+    "    # Adding noise to the buffer\n",
+    "    for _ in range(2000):\n",
+    "        n1.neightboors[0].param_bufffer += \"noise\".encode(\"utf-8\")\n",
+    "    \n",
+    "        \n",
+    "test_bad_binary_model(two_nodes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5d55c7d2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 54000 Val:6000 Test:10000\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 51235\n",
+      "INFO:root:Nodo a la escucha en 127.0.0.1 51239\n",
+      "INFO:root:Conexión aceptada con ('127.0.0.1', 51235)\n",
+      "INFO:root:Broadcasting start learning...\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Model added (1/2)\n",
+      "INFO:root:Model added (1/2)\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "ERROR:root:Model not matching\n",
+      "ERROR:root:Model not matching\n",
+      "ERROR:root:Model not matching\n"
+     ]
+    }
+   ],
+   "source": [
+    "from p2pfl.communication_protocol import CommunicationProtocol\n",
+    "from p2pfl.const import HEARTBEAT_FREC, TIEMOUT\n",
+    "from p2pfl.learning.pytorch.datamodules.mnist import MnistFederatedDM\n",
+    "from p2pfl.learning.pytorch.models.cnn import CNN\n",
+    "from p2pfl.learning.pytorch.models.mlp import MLP\n",
+    "from p2pfl.node import Node\n",
+    "import pytest\n",
+    "import time\n",
+    "import torch\n",
+    "\n",
+    "def test_wrong_model():\n",
+    "    n1 = Node(MLP(),MnistFederatedDM())\n",
+    "    n2 = Node(CNN(),MnistFederatedDM())\n",
+    "    n1.start()\n",
+    "    n2.start()\n",
+    "\n",
+    "    n1.connect_to(n2.host,n2.port)\n",
+    "    time.sleep(0.1) \n",
+    "    \n",
+    "    n1.set_start_learning(rounds=2,epochs=0)\n",
+    "    \n",
+    "test_wrong_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a07038",
    "metadata": {},
    "outputs": [],
    "source": []
